5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1595_1015.log
== TEST (2019-03-22 09:37:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
c = int(input("Insira um numero inteiro: "))
print(min(a,b,c))
print((a+b+c)-(min(a,b,c)-(max(a,b,c))
print(max(a,b,c))
-- ERROR:
File "XXXX", line 9
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:40:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
c = int(input("Insira um numero inteiro: "))
print(min(a,b,c))
print((a+b+c)-(min(a,b,c)-(max(a,b,c))
print(max(a,b,c))
-- ERROR:
File "XXXX", line 9
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:41:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
c = int(input("Insira um numero inteiro: "))
print(min(a,b,c))

-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:42:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
c = int(input("Insira um numero inteiro: "))
print(min(a,b,c))
print((a+b+c)-(min(a,b,c)-(max(a,b,c))

-- ERROR:
File "XXXX", line 9
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:48:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
c = int(input("Insira um numero inteiro: "))
print(min(a,b,c))
print((a+b+c)-(min(a,b,c)-(max(a,b,c))

-- ERROR:
File "XXXX", line 9
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:50:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
c = int(input("Insira um numero inteiro: "))
print(min(a,b,c))
print((a+b+c)-(min(a,b,c))-(max(a,b,c)))

-- OUTPUT:
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 09:51:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
c = int(input("Insira um numero inteiro: "))
print(min(a,b,c))
print((a+b+c)-(min(a,b,c))-(max(a,b,c)))
print(max(a,b,c))

-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 09:51:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Insira um numero inteiro: "))
b = int(input("Insira um numero inteiro: "))
c = int(input("Insira um numero inteiro: "))
print(min(a,b,c))
print((a+b+c)-(min(a,b,c))-(max(a,b,c)))
print(max(a,b,c))

-- EXECUTION TIME:
0.128667
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
